# finder

./: Cargo.toml  README.md  Taskfile.yaml  go.mod  go.sum  main.go
cmd/: root.go
internal/: internal.go  text.go
internal/blink/: blink.go
internal/font/: font.go
internal/inputbox/: inputbox.go
internal/key/: key.go
internal/textbox/: inline.go  mulitline.go  textbox.go
internal/window/: window.go
src/: main.rs  matcher.rs  winit_helpers.rs
ui/: ui.slint
