[package]
name = "slint-test"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4.0"
i-slint-backend-winit = "*"
winit = "0"

[build-dependencies]
slint-build = "1.4.0"

[profile.release]
strip = true
opt-level = "s"

[profile.dev]
opt-level = 0
