[package]
name = "slint-test"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4.0"
i-slint-backend-winit = "*"
winit = "0"
walkdir = "2.2.7"
grep-searcher = "0.1.13"
grep-regex = "0.1.12"
grep-matcher = "0.1.7"
grep-printer = "0.2.1"
ignore = "0.4.22"

[build-dependencies]
slint-build = "1.4.0"

[profile.release]
strip = true
opt-level = "s"

[profile.dev]
opt-level = 0
